# CPPSnakeGame

./: .gitignore  CMakeLists.txt  README.md
Scripts/: Build.sh  Clean.sh  Run.sh
Sources/: Definitions.hpp  GameObjects.hpp  GateObjects.hpp  Libraries.hpp  Main.cpp  MainScreen.cpp  MainScreen.hpp  SnakeGame.cpp  SnakeGame.hpp  SnakeObject.cpp  SnakeObject.hpp
